Fix handsontable/draftail clipping

--- a/cfgov/templates/wagtailadmin/css/table-block.css
+++ b/cfgov/templates/wagtailadmin/css/table-block.css
@@ -17,6 +17,10 @@
     overflow-y: visible !important;
 }
 
+.handsontableInputHolder .Draftail-Editor__wrapper {
+  overflow-y: visible !important;
+}
+
 .handsontable,
 .handsontable .wtHolder {
   height: 100% !important;
